pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/basic-egress.listener.golden.yaml
address:
  socketAddress:
    address: 192.168.0.1
    portValue: 10002
enableReusePort: false
filterChains:
- filterChainMatch:
    serverNames:
    - external-service-1{mesh=mesh-1}
    transportProtocol: tls
  filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      accessLog:
      - name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            jsonFormat:
              address: 127.0.0.1:5555
              message: |
                [%START_TIME%] mesh-1 "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-B3-TRACEID?X-DATADOG-TRACEID)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "egress" "external-service-1" "192.168.0.1" "%UPSTREAM_HOST%"
          path: /tmp/foo
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      statPrefix: external-service-1
  name: external-service-1_mesh-1
- filterChainMatch:
    serverNames:
    - external-service-2{mesh=mesh-1}
    transportProtocol: tls
  name: external-service-2_mesh-1
- filterChainMatch:
    serverNames:
    - external-service-1{mesh=mesh-2}
    transportProtocol: tls
  filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] %RESPONSE_FLAGS% mesh-2 192.168.0.1(egress)->%UPSTREAM_HOST%(external-service-1) took %DURATION%ms, sent %BYTES_SENT% bytes, received: %BYTES_RECEIVED% bytes
          path: /tmp/log
      cluster: external-service-1
      statPrefix: external-service-1
  name: external-service-1_mesh-2
- filterChainMatch:
    serverNames:
    - internal-service-1{mesh=mesh-1}
    transportProtocol: tls
  name: internal-service-1_mesh-1
name: test_listener
trafficDirection: INBOUND
