pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_backend_plain_format.cluster.golden.yaml
altStatName: meshaccesslog_opentelemetry_0
connectTimeout: 5s
dnsLookupFamily: V4_ONLY
loadAssignment:
  clusterName: meshaccesslog:opentelemetry:0
  endpoints:
  - lbEndpoints:
    - endpoint:
        address:
          socketAddress:
            address: otel-collector
            portValue: 4317
name: meshaccesslog:opentelemetry:0
type: STRICT_DNS
typedExtensionProtocolOptions:
  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    explicitHttpConfig:
      http2ProtocolOptions: {}
