pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_backend_plain_format.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 37779
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - name: envoy.access_loggers.open_telemetry
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
          attributes: {}
          body:
            kvlistValue:
              values:
              - key: mesh
                value:
                  stringValue: default
          grpcService:
            envoyGrpc:
              clusterName: system_meshaccesslog_otel_other-otel-collector
          logName: MeshAccessLog
          resourceAttributes:
            values:
            - key: kuma.mesh
              value:
                stringValue: default
      cluster: kri_msvc_default_zone-1_other-ns_bar-meshservice-tcp_37779
      statPrefix: kri_msvc_default_zone-1_other-ns_bar-meshservice-tcp_37779
metadata:
  filterMetadata:
    io.kuma.tags:
      kuma.io/unified-name: kri_msvc_default_zone-1_other-ns_bar-meshservice-tcp_37779
name: kri_msvc_default_zone-1_other-ns_bar-meshservice-tcp_37779
statPrefix: kri_msvc_default_zone-1_other-ns_bar-meshservice-tcp_37779
trafficDirection: OUTBOUND
