pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/outbound_otel_backend_plain_format_1.listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 37778
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - name: envoy.access_loggers.open_telemetry
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
          attributes: {}
          body:
            stringValue: default
          grpcService:
            envoyGrpc:
              clusterName: system_meshaccesslog_otel_otel-collector
          logName: MeshAccessLog
          resourceAttributes:
            values:
            - key: kuma.mesh
              value:
                stringValue: default
      cluster: kri_msvc_default_zone-1_other-ns_foo-meshservice-tcp_37778
      statPrefix: kri_msvc_default_zone-1_other-ns_foo-meshservice-tcp_37778
metadata:
  filterMetadata:
    io.kuma.tags:
      kuma.io/unified-name: kri_msvc_default_zone-1_other-ns_foo-meshservice-tcp_37778
name: kri_msvc_default_zone-1_other-ns_foo-meshservice-tcp_37778
statPrefix: kri_msvc_default_zone-1_other-ns_foo-meshservice-tcp_37778
trafficDirection: OUTBOUND
