pkg/plugins/policies/meshaccesslog/plugin/v1alpha1/testdata/zoneingress_matches_spiffeid.listener.golden.yaml
address:
  socketAddress:
    address: 10.20.30.40
    portValue: 10001
enableReusePort: true
filterChains:
- filterChainMatch:
    serverNames:
    - inbound-backend{mesh=default}
    transportProtocol: tls
  filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      accessLog:
      - filter:
          extensionFilter:
            name: envoy.access_loggers.extension_filters.cel
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter
              expression: connection.uri_san_peer_certificate.startsWith("spiffe://default/ns/clients/")
        name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          logFormat:
            textFormatSource:
              inlineString: |
                [%START_TIME%] %RESPONSE_FLAGS% default 127.0.0.1(unknown)->%UPSTREAM_HOST%(unknown) took %DURATION%ms, sent %BYTES_SENT% bytes, received: %BYTES_RECEIVED% bytes
          path: /tmp/ingress.log
      accessLogOptions:
        flushAccessLogOnConnected: true
      cluster: backend
      statPrefix: backend
name: self_zoneingress_dp_zi-port
trafficDirection: INBOUND
